Fix center-align items in postnav component

--- a/src/assets/styles/partials/_postnav.scss
+++ b/src/assets/styles/partials/_postnav.scss
@@ -3,10 +3,6 @@
 
   &__inner {
     @extend %content;
-
-    @include breakpoint($desktop) {
-      align-items: center;
-    }
   }
 
   &__title {
